Create api for admin dashboard (#24)
